[gd_scene load_steps=2 format=3 uid="uid://n5n5bff0e5y8"]

[ext_resource type="Script" path="res://scripts/health_system/kill_zone.gd" id="1_6w36w"]

[node name="kill_zone" type="Area2D"]
script = ExtResource("1_6w36w")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
